5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4186/executions/1582_1332.log
== SUBMITION (2019-03-14 13:08:04) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2, 4))
-- EXECUTION TIME:
0.138689
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 13:08:06) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2, 4))
-- EXECUTION TIME:
0.17938
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:32:58) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.139916
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
